# aims

./: .gitattributes  .gitignore  .hintrc  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  N8N_API_KEY_IMPLEMENTATION.md  PRINCIPLES.md  README.md  REBOOT_STATE.md  TDD_STRATEGY.md  deploy_all.sh  dev-start.bat  dev-start.vbs  package-lock.json  package.json  pyproject.toml
backend/api/document_pipeline/: .env.example  DOMAIN_MAPPING.md  __init__.py  config.py  deploy_document_pipeline.sh  ecosystem.config.js  main.py  pyproject.toml  requirements.txt
backend/api/document_pipeline/contracts/: __init__.py  dynamic_fields.py
backend/api/document_pipeline/docs/: DISPLAY_NAME_TEXT_THRESHOLD.md
backend/api/document_pipeline/e2e/: test_pipeline_e2e.py
backend/api/document_pipeline/golden_master/: __init__.py  collect.py  shadow_pipeline.py  shadow_run.py  test_side_effects.py  verify.py
backend/api/document_pipeline/insurance/: __init__.py  adapter.py
backend/api/document_pipeline/middleware/: __init__.py  shadow_mode.py
backend/api/document_pipeline/models/: __init__.py  document.py  responses.py
backend/api/document_pipeline/poc_legal/: __init__.py  adapter.py  test_legal_adapter.py
backend/api/document_pipeline/routers/: __init__.py  doc_display_name.py  doc_meta.py  doc_ocr.py  doc_prep_main.py  doc_summary.py  doc_upload.py  shadow_router.py  smart_search.py
backend/api/document_pipeline/scripts/: backfill_display_names.py
backend/api/document_pipeline/services/: __init__.py  analytics_writer.py  anthropic_service.py  file_service.py  internal_api.py  (+9 more)
(+3142 files in other folders)
